# komunterio

./: Cargo.toml  Komunterio.sln  README.md  credits.txt  project.godot  text.ron
addons/debug_menu/: debug_menu.gd.uid  plugin.gd.uid
addons/instant-realistic-light/: light_scene.tscn  plugin.gd.uid
assets/scenes/: main.dr  menu.ron
config/: fade_label1.tres  main_menu1.tres  main_menu2.tres  settings.toml  ui1.tres  ui2.tres  ui3.tres
fonts/: BBHSansBogle-Regular.ttf.import  dse-typewriter-font.ttf.import
models/: Bricks047_1K-JPG.mtlx  Bricks047_1K-JPG.usdc
models/door_01/: door_01.glb  door_01.glb.import  door_01.material  door_01.tscn  door_01_dif.png.import  door_01_nrm.png.import  door_01_spec.png.import
models/fence_yard_01/: fence_yard_protection.glb.import  fence_yard_protection_0.png.import  fence_yard_protection_1.png.import  fence_yard_protection_2.png.import
models/glasses/: Base_AO.jpg.import  Box_AO.jpg.import  Box_Emissive.jpg.import  Wire1_AO.jpg.import  Wire2_AO.jpg.import  glasses.mtl  glasses.obj.import  glasses_base.material  glasses_box.material  glasses_glass.material  (+2 more)
scenes/: labortago_01.tscn  main_menu.tscn
scripts/: LabortagoGameState.cs  LabortagoGameState.cs.uid  PlayerController.cs  PlayerController.cs.uid  Utils.cs  Utils.cs.uid
shaders/: arabeskoj.material  arabeskoj.tres  crt_material.tres  crt_shader.gdshader  crt_shader.gdshader.uid  portal.gdshader.uid  scary_dark_vignette.gdshader.uid  scary_dark_vignette.material  ui_glow.gdshader  ui_glow.gdshader.uid  vignette.gdshader.uid
src/: main.rs  setup.rs
(+185 files in other folders)
